Fixed fit-content CSS property on safari

--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -694,6 +694,7 @@ border-right: 2px solid rgb(137,137,137);
     outline: none;
     height: 30px;
     width: 30px;
+    padding: 5px;
     cursor: pointer;
     font-weight: bold;
     border-radius: 8px;
@@ -2768,13 +2769,14 @@ input[type=radio]:checked + label {
 }
 .btn-undo {
   font-family: Prototype;
-    outline: none;
-    color: rgb(48,48,48);
-    height: 40px;
-    width: fit-content;
-    cursor: pointer;
-    font-size: 16px;
-    border-radius: 8px;
-    margin-right: 8px;
-    vertical-align: top;
+  outline: none;
+  color: rgb(48,48,48);
+  height: 40px;
+  width: fit-content;
+  cursor: pointer;
+  font-size: 16px;
+  border-radius: 8px;
+  margin-right: 8px;
+  vertical-align: top;
+  padding: 5px;
 }
